--- a/design/frontend/TaVitka/theme/web/css/source/_extend.less
+++ b/design/frontend/TaVitka/theme/web/css/source/_extend.less
@@ -1,8 +1,39 @@
 .page-header {
-    .panel.wrapper {
-        border: none;
-        background-color: #eff7f5;
-        color: #025e38;
+  background-color: #025e38;
+  .panel.wrapper {
+    border: none;
+    background-color: #eff7f5;
+    color: #025e38;
+  }
+  .panel.header {
+    .header.links li a {
+      color: #025e38;
     }
+  }
+}
+
+.blocks-promo span.button {
+  &.more {
     background-color: #025e38;
+    border-color: #025e38;
+    transition: border-color 0.6s ease-in-out, background-color 0.4s ease-in-out;
+  }
+
+  &.more:hover {
+    background-color: #037e4b;
+    border-color: #037e4b;
+  }
+}
+
+.action {
+  &.primary {
+    background-color: #025e38;
+    border-color: #025e38;
+    transition: border-color 0.6s ease-in-out, background-color 0.4s ease-in-out;
+  }
+
+  &.primary:hover {
+    background-color: #037e4b;
+    border-color: #037e4b;
+  }
 }
